--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "license": "UNLICENSED"
+}
+{
   "name": "liga-a-start-template",
   "version": "1.0.0",
   "description": "Стартовый шаблон сборки Лиги А",
