--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "license": "UNLICENSED"
-}
-{
-  "name": "liga-a-start-template",
+  "name": "Way",
   "version": "1.0.0",
-  "description": "Стартовый шаблон сборки Лиги А",
+  "description": "Grade project HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.5.x",
+    "autoprefixer": "^10.2.6",
     "browser-sync": "2.26.x",
     "eslint": "4.16.0",
     "eslint-config-htmlacademy": "0.4.x",
-    "gulp": "4.0.x",
+    "gulp": "^4.0.2",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "1.2.x",
-    "gulp-postcss": "8.0.x",
+    "gulp-postcss": "^9.0.0",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "4.0.x",
@@ -23,13 +20,13 @@
     "gulp-svgstore": "^7.0.1",
     "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.2.0",
-    "stylelint": "9.10.x",
+    "prettier": "2.3.0",
+    "stylelint": "^9.3.0",
     "stylelint-config-htmlacademy": "0.1.x"
   },
   "scripts": {
-    "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
+    "test": "npm run stylelint && eslint source/js/",
     "build": "gulp build",
     "start": "gulp start",
     "webp": "gulp webp",
@@ -40,16 +37,8 @@
     "IE 11",
     "Firefox ESR"
   ],
-  "editorconfig-cli": [
-    "*.json",
-    "*.js",
-    "source/*.html",
-    "source/js/**/*.js",
-    "source/img/**/*.svg",
-    "source/sass/**/*.{sass,scss}"
-  ],
   "engines": {
-    "node": "^8.15"
+    "node": "^14.0"
   },
   "dependencies": {
     "del": "^4.1.1"
